<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Customize_Drink_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:gravity="center">

        <ImageView
            android:id="@+id/customsDrinkImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/espresso" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginVertical="20dp"
        android:gravity="right"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customDrinkName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cappuccino"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtprice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/egp_36"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btnminuse"
                android:layout_alignParentLeft="true"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/add_minus"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textquantity"
                android:layout_toRightOf="@+id/btnminuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="0"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/btnblus"
                android:layout_toRightOf="@+id/textquantity"
                android:layout_alignParentRight="true"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/add_blus"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/txtsize"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/smallsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/groupcopy3" />

        <ImageView
            android:id="@+id/medeumsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/groupcopy" />

        <ImageView
            android:id="@+id/bigsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/groupcopy2" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/txtsugar"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgonesuger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/group4copy" />

        <ImageView
            android:id="@+id/imgtwosuger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/group4copy2" />

        <ImageView
            android:id="@+id/imgthreesuger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/group4copy3" />

        <ImageView
            android:id="@+id/imgnosuger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/group4copy4" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/txtadditions"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgcream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/fill4" />

        <ImageView
            android:id="@+id/imgother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/fill1" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="170dp"
            android:text="@string/txttotal"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtprice23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtprice2"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnaddtocart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/radius2"
        android:text="@string/btnaddtocart" />
</LinearLayout>